# real-time-ai-monitoring-platform

./: .env.example  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  OPERATIONS.md  README.md  docker-compose.yml  pyproject.toml  sample_metric.json
docs/: adr-001-health-scoring-and-incidents.md
frontend/: index.html
frontend/src/: main.jsx  styles.css
src/ai_monitoring/: __init__.py  alerts.py  api.py  cli.py  config.py  incidents.py  schemas.py  scoring.py  service.py  storage.py
tests/: test_alerts.py  test_api.py  test_scoring.py  test_service.py
